<resources>
    <string name="app_name">WordHunt</string>
    <string name="Timer">Timer</string>
    <string name="Score">Score</string>
    <string name="Num_of_Words"># words</string>
    <string name="Submit">Submit</string>
    <string name="Title">WordHunt</string>
    <string name="Play">Play</string>
    <string name="Stats">Stats</string>
    <string name="Tutorial">Tutorial</string>
    <string name="score_format">Score: %d</string>
    <string name="Word_View">						</string>
    <string name="tutorial_description">Welcome to the tutorial! Follow these steps to learn how to use the app.\n\n1) Tap letters together by clicking the buttons.\n\n2) Make as many words as possible.</string>
    <string name="highest_score_label">Highest Score</string>
    <string name="longest_word_label">Longest Word</string>
    <string name="na_placeholder">N/A</string>
    <string name="initial_score">0</string>

</resources>