<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="androidx.navigation.fragment.NavHostFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:defaultNavHost="true"
    app:navGraph="@navigation/nav_graph"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/Light_blue"
    tools:context=".MainActivity">

    <!-- Top Half: Timer, Score, Number of Words -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Timer Bubble -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/light_green">

            <!-- Add your timer UI components here -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/Timer"
                android:textSize="24sp" />
            <!-- Add more timer-related UI components as needed -->

        </LinearLayout>

        <!-- Score Bubble -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/light_green">

            <!-- Add your score UI components here -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/Score"
                android:textSize="18sp" />
            <!-- Add more score-related UI components as needed -->

        </LinearLayout>

        <!-- Number of Words Bubble -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/light_green">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/Num_of_Words"
                android:textSize="18sp" />
            <!-- Add more components as needed -->

        </LinearLayout>

    </LinearLayout>

    <!-- Bottom Half: Word Search Grid and Submit Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:columnCount="4"
            android:rowCount="4">

            <!-- Add buttons for each grid cell here -->
            <Button
                android:id="@+id/button00"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button01"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button02"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button03"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button10"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button11"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button12"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button13"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button20"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button21"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button22"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button23"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button30"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button31"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button32"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button33"
                style="@style/GridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </GridLayout>

    </LinearLayout>

    <Button
        style="@style/SubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Submit" />

</LinearLayout>